# Linguistic-analysis-

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_vs_code_uv.sh  testnvidia.py
Avner/: extract_text.py  extract_text_v2.py  extract_v3.py
data/InfoNCE/: archelect_scored_NCE.parquet  checkpoint_dataset.json  groupedNCE100.json  groupedNCEV2.json  groupedNCE_corrected.json  groupedNCEtest.json  pairsNCE.json
data/POLAR/: pairs.json
data/clean/: top_k_test.csv
helper_function/: print.py
notebook/: exploration.ipynb
src/: main.py
src/ETL/: extract_text.py  extract_text_v2.py  extract_v3.py  preprocess_archelect.py  preprocessing.py
src/InfoNCE/: DataNCE.py  InfoNCE.py  ProfilingNCE.py  RadarNCE.py  RetrievalNCE.py  TestNCE.py  VisuNCE.py  dataNCE.py  datasetNCE.py  visualisation.py
src/InfoNCE/Constants/: constraints.py  generation_context.py  prompts.py  query.py
src/POLAR/: README.md  assess_wooden.py  axis_generation.py  generate_pairs.py  generate_plot.py  scoring_pipeline.py  visual_analysis.py
src/POLAR/data/: pairs.json
src/preprocessing/: chunking.py  preprocess_archelect.py
src/wooden_pipotron/: README.md  pipotron_analysis.py  wooden_data.py
