[project]
name = "linguistic-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arkindex-export>=0.2.1",
    "cookiecutter>=2.6.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "flake8>=7.3.0",
    "pandas>=3.0.0",
    "pathlib>=1.0.1",
    "polars>=1.38.1",
    "ruff>=0.15.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
