[project]
name = "linguistic-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "arkindex-export>=0.2.1",
    "cookiecutter>=2.6.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "faiss-cpu>=1.13.2",
    "flake8>=7.3.0",
    "matplotlib>=3.10.8",
    "mlx-lm>=0.31.2",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "nltk>=3.9.4",
    "pandas>=3.0.0",
    "pathlib>=1.0.1",
    "pyarrow>=23.0.1",
    "ruff>=0.15.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "spacy>=3.8.14",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
